--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
                                                     <b class="is-hidden">Penetration Tester</b>
                                                     <b class="is-hidden">Innovative Developer</b>
                                                     <b class="is-hidden">CTF Maestro</b>
-                                                    <b class="is-hidden">Perpetual Learner..</b>
+                                                    <b class="is-hidden">Lifelong Learner</b>
+                                                    <b class="is-hidden">Red Teaming Practitioner</b>
                                                 </span>
                                             </span>
                                             <!-- Elevate your experience -->
