--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <!-- Start Header Right  -->
                     <div class="header-right">
                         <a class="rn-btn" target="_blank" href="https://tryhackme.com/p/Thehackr"><span>TryHackMe Profile</span></a>
-                        <a class="rn-btn" target="_blank" href="https://drive.google.com/file/d/1U07h0iV4uqQMREVfTvUue6UICdfkVDhf/view?usp=drive_link"><span>Resume</span></a>
+                        <a class="rn-btn" target="_blank" href="#"><span>Resume</span></a>
                         <div class="hamberger-menu d-block d-xl-none">
                             <i id="menuBtn" class="feather-menu humberger-menu"></i>
                         </div>
@@ -103,7 +103,7 @@
                         </div> -->
                         
                     </div><br>
-                    <a class="rn-btn" target="_blank" href="https://drive.google.com/file/d/1U07h0iV4uqQMREVfTvUue6UICdfkVDhf/view?usp=drive_link"><span>Resume</span></a>
+                    <a class="rn-btn" target="_blank" href="#"><span>Resume</span></a>
                 </ul>
                 <!-- social sharea area -->
                 <div class="social-share-style-1 mt--40">
