--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Welcome to Rahul's Dynamic Portfolio</title>
+    <title>Welcome to Rahul's Portfolio</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="Explore the captivating portfolio.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -85,7 +85,7 @@
                         <button class="close-menu-activation close"><i data-feather="x"></i></button>
                     </div>
                 </div>
-                <p class="discription">Rahul Urf Munna</p>
+                <p class="discription">Th3H4cK3R_R4HUL</p>
             </div>
             <div class="content">
                 <ul class="primary-menu nav nav-pills">
@@ -133,7 +133,7 @@
                             <div class="content">
                                 <div class="inner">
                                     <span class="subtitle">$whoami <span class="cursor">|</span></span>
-                                    <h1 class="title">Greetings, I'm <span>Rahul Thakur</span><br>
+                                    <h1 class="title">Hello, I'm <span>राहुल ठाकुर</span><br>
                                         <span class="header-caption" id="page-top">
                                             <!-- Unleash the power of dynamic headlines -->
                                             <span class="cd-headline clip is-full-width">
@@ -143,7 +143,7 @@
                                                     <b class="is-visible">MCEH Ethical Hacker</b>
                                                     <b class="is-hidden">Penetration Tester</b>
                                                     <b class="is-hidden">Innovative Developer</b>
-                                                    <b class="is-hidden">CTF Maestro</b>
+                                                    <b class="is-hidden">CTF Player</b>
                                                     <b class="is-hidden">Lifelong Learner</b>
                                                     <b class="is-hidden">Red Teaming Practitioner</b>
                                                 </span>
