--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                     
 
                                     <div>
-                                        <p class="description">I'm deeply passionate about technology and cybersecurity, focused on expanding my skills.<br><br>Currently a Security Analyst at QRC Assurance And Solutions, I previously interned as a Penetration Tester at Cybertix.in. Specializing in Vulnerability Assessment and Penetration Testing, I refine my abilities through platforms like TryHackMe, HTB, and Portswigger. Actively participating in Capture The Flag competitions, I explore cloud and Active Directory Penetration Testing. My next goal is to master Red Teaming to simulate real-world cyber threats.<br><br> I am currently learning Red Teaming skills from TryHackMe in preparation for a Red Team certification</p>
+                                        <p class="description">As a dedicated Security Analyst at QRC Assurance And Solutions, with prior experience as a Penetration Testing Intern at Cybertix.in, I specialize in Vulnerability Assessment and Penetration Testing (VAPT). My skills are honed through continuous learning on platforms such as TryHackMe, Hack The Box, and PortSwigger, alongside active participation in Capture The Flag (CTF) competitions. With a focus on cloud environments and Active Directory Penetration Testing, I aim to enhance my expertise in Red Teaming, preparing for certification to simulate real-world cyber threats. My skills are designed to secure your infrastructure against cyber threats and malicious actors, ensuring robust protection from black-hat hackers and other adversaries</p>
 
                                     </div>
                                 </div>
