--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                     
 
                                     <div>
-                                        <p class="description">As a dedicated Security Analyst at QRC Assurance And Solutions, with prior experience as a Penetration Testing Intern at Cybertix.in, I specialize in Vulnerability Assessment and Penetration Testing (VAPT). My skills are honed through continuous learning on platforms such as TryHackMe, Hack The Box, and PortSwigger, alongside active participation in Capture The Flag (CTF) competitions. With a focus on cloud environments and Active Directory Penetration Testing, I aim to enhance my expertise in Red Teaming, preparing for certification to simulate real-world cyber threats. My skills are designed to secure your infrastructure against cyber threats and malicious actors, ensuring robust protection from black-hat hackers and other adversaries</p>
+                                        <p class="description">With 2 years of professional experience and expertise in Vulnerability Assessment and Penetration Testing, I help secure your infrastructure from cyber threats. As a Security Analyst at QRC Assurance And Solutions, I continuously refine my skills through platforms like TryHackMe. My focus on cloud security, Active Directory, and Red Teaming ensures robust protection against black-hat hackers.</p>
 
                                     </div>
                                 </div>
