--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                     
 
                                     <div>
-                                        <p class="description">With 2 years of professional experience and expertise in Vulnerability Assessment and Penetration Testing, I help secure your infrastructure from cyber threats. As a Security Analyst at QRC Assurance And Solutions, I continuously refine my skills through platforms like TryHackMe. My focus on cloud security, Active Directory, and Red Teaming ensures robust protection against black-hat hackers.</p>
+                                        <p class="description">With more than 3+ years of professional experience and expertise in Vulnerability Assessment and Penetration Testing, I help secure your infrastructure from cyber threats. As a Security Analyst, I focus on Web, Android, API, internal/external network testing, configuration reviews, and source code analysis. I continuously enhance my skills through platforms like THM, HTB, Portswigger, CTF, etc. My focus is on cloud security and Active Directory, and I am currently practicing Red Teaming to ensures robust protection against black-hat hackers.</p>
 
                                     </div>
                                 </div>
