--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                         <span class="header-caption" id="page-top">
                                             <!-- Unleash the power of dynamic headlines -->
                                             <span class="cd-headline clip is-full-width">
-                                                <span>Embarking on a journey as a </span>
+                                                <span>On a mission to secure the digital world.</span>
                                                 <!-- Captivating ROTATING TEXT -->
                                                 <span class="cd-words-wrapper">
                                                     <b class="is-visible">MCEH Ethical Hacker</b>
@@ -154,7 +154,7 @@
                                     
 
                                     <div>
-                                        <p class="description">With more than 3+ years of professional experience and expertise in Vulnerability Assessment and Penetration Testing, I help secure your infrastructure from cyber threats. As a Security Analyst, I focus on Web, Android, API, internal/external network testing, configuration reviews, and source code analysis. I continuously enhance my skills through platforms like THM, HTB, Portswigger, CTF, etc. My focus is on cloud security and Active Directory, and I am currently practicing Red Teaming to ensures robust protection against black-hat hackers.</p>
+                                        <p class="description">With over 3 years of professional experience in Vulnerability Assessment and Penetration Testing, I specialize in safeguarding infrastructure from cyber threats. As a Security Analyst, I focus on web applications, Android platforms, APIs, internal/external network testing, configuration reviews, and source code analysis. My continuous skill enhancement comes from platforms such as TryHackMe (THM), Hack The Box (HTB), and PortSwigger's Web Security Academy, as well as various Capture the Flag (CTF) challenges. My current focus is cloud security and Active Directory, emphasizing Red Teaming to ensure effective defense against black-hat hackers.</p>
 
                                     </div>
                                 </div>
