--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                 </div>
                                 <div class="content">
                                     <h4 class="title"><a href="#">Penetration Testing</a></h4>
-                                    <p class="description">I specialize in VAPT, Ethical Hacking utilizing extensive hands-on experience to secure digital assets against evolving threats.</p>
+                                    <p class="description">Our penetration testing services leverage advanced Vulnerability Assessment and Penetration Testing (VAPT) methodologies to identify and eliminate vulnerabilities. We specialize in ethical hacking, utilizing extensive hands-on experience to safeguard your digital assets from modern security threats.</p>
 
                                     <a class="read-more-button" href="#"><i class="feather-arrow-right"></i></a>
                                 </div>
@@ -249,7 +249,7 @@
                                 </div>
                                 <div class="content">
                                     <h4 class="title"><a href="#">Web Design & Development</a></h4>
-                                    <p class="description">Our team excels in crafting responsive web applications using the latest technologies, ensuring intuitive user experiences and robust performance</p>
+                                    <p class="description">We design and develop highly responsive, user-centric web applications. Our team integrates cutting-edge technologies to deliver seamless user experiences and optimized performance, ensuring your digital presence stands out in today’s competitive market.</p>
 
                                     <a class="read-more-button" href="#"><i class="feather-arrow-right"></i></a>
                                 </div>
@@ -269,7 +269,7 @@
                                 </div>
                                 <div class="content">
                                     <h4 class="title"><a href="#">UI/Graphic Design</a></h4>
-                                    <p class="description">Immerse your projects in our creative expertise. Our seasoned designers deliver innovative solutions promptly and affordably</p>
+                                    <p class="description">Enhance your brand identity with our innovative UI/Graphic Design solutions. Our experienced designers deliver visually stunning, functional, and user-friendly designs tailored to your project needs—efficiently and affordably.</p>
 
                                     <a class="read-more-button" href="#"><i class="feather-arrow-right"></i></a>
                                 </div>
