--- a/index.html
+++ b/index.html
@@ -1209,10 +1209,10 @@
                                 <span></span>
                             </div>
                             <div class="description">
-                                <p>Open for freelance collaborations! Reach out to us via Contact Us to discuss your projects.</p>
+                                <p>We’re open for freelance projects, Contact us to explore how we can collaborate!</p>
 
                           
-                                <span class="mail">Visit <a href="https://sarsolutionz.blogspot.com/">Sarsolutionz</a></span>
+                                <span class="mail">Explore for More<a href="https://sarsolutionz.blogspot.com/">Sarsolutionz</a></span>
                             </div>
                             <div class="social-area">
                                 <div class="name">FIND WITH ME</div>
