--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="menu-top">
                 <div class="menu-header">
                     <a class="logo" href="index.html">
-                        <img src="assets/images/icons/empty.gif" alt="Personal Portfolio">
+                        <img src="assets/images/icons/BG.gif" alt="Personal Portfolio">
                     </a>
                     <div class="close-button">
                         <button class="close-menu-activation close"><i data-feather="x"></i></button>
