--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <div class="content">
                                 <div class="inner">
                                     <span class="subtitle">$whoami <span class="cursor">|</span></span>
-                                    <h1 class="title">Hello, I'm <span>राहुल ठाकुर</span><br>
+                                    <h1 class="title"  style="color: orange;"alt="Hello">जय श्री राम , I'm <span>राहुल ठाकुर</span><br>
                                         <span class="header-caption" id="page-top">
                                             <!-- Unleash the power of dynamic headlines -->
                                             <span class="cd-headline clip is-full-width">
