--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="assets/css/vendor/slick-theme.css">
     <link rel="stylesheet" href="assets/css/vendor/aos.css">
     <link rel="stylesheet" href="assets/css/plugins/feature.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <!-- Personalized Style Touch -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -132,7 +134,9 @@
                         <div class="order-2 order-lg-1 col-lg-7 mt_md--50 mt_sm--50 mt_lg--30">
                             <div class="content">
                                 <div class="inner">
-                                    <span class="subtitle">$whoami <span class="cursor">|</span></span>
+                                    <span class="subtitle">$whoami <span class="fa-solid fa-om"></span></span>
+
+<!--                                     <span class="subtitle">$whoami <span class="cursor">|</span></span> -->
 <!--                                     <h1 class="title"  style="color: orange;"alt="Hello">जय श्री राम , I'm <span>राहुल ठाकुर</span><br> -->
                                     <h1 class="title" alt="Hello"> <span style="color: #FF7722;">जय श्री राम</span>, I'm <span style="color: #FF9933;">राहुल ठाकुर</span><br>
                                         <span class="header-caption" id="page-top">
