--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="order-2 order-lg-1 col-lg-7 mt_md--50 mt_sm--50 mt_lg--30">
                             <div class="content">
                                 <div class="inner">
-                                    <span class="subtitle">$whoami <span class="fa-solid fa-om"></span></span>
+                                   <span class="subtitle">$whoami <span class="fa-solid fa-om om-blink"></span></span>
 
 <!--                                     <span class="subtitle">$whoami <span class="cursor">|</span></span> -->
 <!--                                     <h1 class="title"  style="color: orange;"alt="Hello">जय श्री राम , I'm <span>राहुल ठाकुर</span><br> -->
