--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                     <!-- Start Header Right  -->
                     <div class="header-right">
                         <a class="rn-btn" target="_blank" href="https://tryhackme.com/p/Thehackr"><span>TryHackMe Profile</span></a>
-                        <a class="rn-btn" target="_blank" href="#"><span>Resume</span></a>
+                        <a class="rn-btn" target="_blank" href="https://drive.google.com/file/d/1tD19sN0_iW15zmiuJCURZbRv36bQ-Bmo/view?usp=drivesdk"><span>Resume</span></a>
+<!--                         Resume Password [Hacked] -->
                         <div class="hamberger-menu d-block d-xl-none">
                             <i id="menuBtn" class="feather-menu humberger-menu"></i>
                         </div>
