--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
                         </div> -->
                         
                     </div><br>
-                    <a class="rn-btn" target="_blank" href="#"><span>Resume</span></a>
+                    <a class="rn-btn" target="_blank" href="https://drive.google.com/file/d/1tD19sN0_iW15zmiuJCURZbRv36bQ-Bmo/view?usp=drivesdk"><span>Resume</span></a>
+                    <!--                         Resume Password [Hacked] -->
                 </ul>
                 <!-- social sharea area -->
                 <div class="social-share-style-1 mt--40">
