--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                     
 
                                     <div>
-                                        <p class="description">Experienced Penetration Tester with 4+ years of hands-on expertise in Vulnerability Assessment and Penetration Testing (VAPT) across Web & Mobile Applications (Android/iOS), APIs, Thick/Thin Clients, and POS systems. Worked across critical sectors including banking, healthcare, government, and fintech.Specialize in deep manual testing, using tools to support and accelerate processes. Conducted on-site assessments for 7+ enterprise clients, offering live remediation and audit support. Secured infrastructures for 100+ clients, aiding in PCI DSS (3.2.1 & 4.0) and ISO 27001 compliance. eCPPT and MCRTA certified; currently pursuing CRTA with a focus on modern adversary simulation and red teaming. Passionate about developing security tools, reading research articles, and solving CTF challenges on platforms like TryHackMe, PortSwigger, and more.</p>
+                                        <p class="description">4+ years in offensive security—breaking Web PT, Mobile App PT(Android/ios), API PT, Network Infra PT, Wifi PT, POS, and client apps. Helped 70+ clients with PCI DSS & ISO 27001. eCPPT & MCRTA certified, now leveling up with CRTA. Tools, bugs, chai, and Burp Suite—my daily grind!.</p>
 
                                     </div>
                                 </div>
