youtube link commented

--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
                                                         <i data-feather="linkedin"></i>
                                                     </a>
                                                 </li>
-                                                <li class="youtube">
+<!--                                                 <li class="youtube">
                                                     <a href="https://www.youtube.com/@thehackr./" target="_blank">
                                                         <i data-feather="youtube"></i>
                                                     </a>
-                                                </li>
+                                                </li> -->
                                             </ul>
                                         </div>
                                     </div>
@@ -1252,7 +1252,7 @@
                                     <a href="https://github.com/Rahul-Thakur7"><i data-feather="github"></i></a>
                                     <a href="https://in.linkedin.com/in/rahul-thakur7"><i data-feather="linkedin"></i></a>
                                     <!-- <a href="https://www.instagram.com/coder_rahult/"><i data-feather="instagram"></i></a> -->
-                                    <a href="https://www.youtube.com/@thehackr./"><i data-feather="youtube"></i></a>
+<!--                                     <a href="https://www.youtube.com/@thehackr./"><i data-feather="youtube"></i></a> -->
                                 </div>
                             </div>
                         </div>
