--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
                                     <i data-feather="menu"></i>
                                 </div>
                                 <div class="content">
-                                    <h4 class="title"><a href="#">Penetration Testing</a></h4>
+                                    <h4 class="title"><a href="https://thehackr.netlify.app/#contacts">Penetration Testing</a></h4>
                                     <p class="description">Our penetration testing services leverage advanced Vulnerability Assessment and Penetration Testing (VAPT) methodologies to identify and eliminate vulnerabilities. We specialize in ethical hacking, utilizing extensive hands-on experience to safeguard your digital assets from modern security threats.</p>
 
-                                    <a class="read-more-button" href="#"><i class="feather-arrow-right"></i></a>
+                                    <a class="read-more-button" href="https://thehackr.netlify.app/#contacts"><i class="feather-arrow-right"></i></a>
                                 </div>
                             </div>
-                            <a class="over-link" href="#"></a>
+                            <a class="over-link" href="https://thehackr.netlify.app/#contacts"></a>
                         </div>
                     </div>
                     <!-- End SIngle Service -->
@@ -283,10 +283,10 @@
                                     <h4 class="title"><a href="#">Web Design & Development</a></h4>
                                     <p class="description">We design and develop highly responsive, user-centric web applications. Our team integrates cutting-edge technologies to deliver seamless user experiences and optimized performance, ensuring your digital presence stands out in today’s competitive market.</p>
 
-                                    <a class="read-more-button" href="#"><i class="feather-arrow-right"></i></a>
+                                    <a class="read-more-button" href="https://thehackr.netlify.app/#contacts"><i class="feather-arrow-right"></i></a>
                                 </div>
                             </div>
-                            <a class="over-link" href="#"></a>
+                            <a class="over-link" href="https://thehackr.netlify.app/#contacts"></a>
                         </div>
                     </div>
                     <!-- End SIngle Service -->
@@ -300,13 +300,13 @@
                                     <i data-feather="slack"></i>
                                 </div>
                                 <div class="content">
-                                    <h4 class="title"><a href="#">UI/Graphic Design</a></h4>
+                                    <h4 class="title"><a href="https://thehackr.netlify.app/#contacts">UI/Graphic Design</a></h4>
                                     <p class="description">Enhance your brand identity with our innovative UI/Graphic Design solutions. Our experienced designers deliver visually stunning, functional, and user-friendly designs tailored to your project needs—efficiently and affordably.</p>
 
-                                    <a class="read-more-button" href="#"><i class="feather-arrow-right"></i></a>
+                                    <a class="read-more-button" href="https://thehackr.netlify.app/#contacts"><i class="feather-arrow-right"></i></a>
                                 </div>
                             </div>
-                            <a class="over-link" href="#"></a>
+                            <a class="over-link" href="https://thehackr.netlify.app/#contacts"></a>
                         </div>
                     </div>
                     <!-- End SIngle Service -->
