--- a/index.html
+++ b/index.html
@@ -172,12 +172,14 @@
                                                 <span>On a mission to secure the digital world.</span>
                                                 <!-- Captivating ROTATING TEXT -->
                                                 <span class="cd-words-wrapper">
-                                                    <b class="is-visible">MCEH Ethical Hacker</b>
-                                                    <b class="is-hidden">Penetration Tester</b>
-                                                    <b class="is-hidden">Innovative Developer</b>
+                                                    <b class="is-visible">Penetration Tester</b>
+                                                     <b class="is-hidden">Red Team Practitioner</b>
+                                                   <b class="is-hidden">Mobile App Security</b>
+                                                    <b class="is-hidden">API Security </b>
+                                                    <b class="is-hidden">Bug Hunter</b>
                                                     <b class="is-hidden">CTF Player</b>
-                                                    <b class="is-hidden">Lifelong Learner</b>
-                                                    <b class="is-hidden">Red Teaming Practitioner</b>
+                                                    <b class="is-hidden">Tool Developer</b>
+                                                    <b class="is-hidden">Learner...</b>
                                                 </span>
                                             </span>
                                             <!-- Elevate your experience -->
