--- a/index.html
+++ b/index.html
@@ -161,7 +161,13 @@
                         <div class="order-2 order-lg-1 col-lg-7 mt_md--50 mt_sm--50 mt_lg--30">
                             <div class="content">
                                 <div class="inner">
-                                   <span class="subtitle">$whoami <span class="fa-solid fa-om om-blink"></span></span>
+                                    <span class="subtitle" style="font-family: 'Fira Code', monospace; color: #00ffcc;">
+                                        <span style="color:#00ffaa;">┌─[</span><span style="color:#fff;">रahul@localhost</span><span style="color:#00ffaa;">]</span>
+                                        <br>
+                                        <span style="color:#00ffaa;">└──╼ $</span> whoami <span class="fa-solid fa-om om-blink" style="color:#ff6600;"></span>
+                                      </span>
+                                      
+                                      
 
 <!--                                     <span class="subtitle">$whoami <span class="cursor">|</span></span> -->
 <!--                                     <h1 class="title"  style="color: orange;"alt="Hello">जय श्री राम , I'm <span>राहुल ठाकुर</span><br> -->
@@ -1298,7 +1304,7 @@
         </label>
         <select class="form-control" id="subject" name="subject" required 
                 style="
-                    padding: 12px 20px;
+                    padding: 3px 12px;
                     font-size: 1.1rem;
                     border-radius: 8px;
                     border: 2px solid #ced4da;
