--- a/index.html
+++ b/index.html
@@ -193,10 +193,45 @@
                                     </h1>
                                     
 
-                                    <div>
-                                        <p class="description">4+ years in offensive security—breaking Web PT, Mobile App PT(Android/ios), API PT, Network Infra PT, Wifi PT, POS, and client apps. Helped 70+ clients with PCI DSS & ISO 27001. eCPPT & MCRTA certified, now leveling up with CRTA. Tools, bugs, chai, and Burp Suite—my daily grind!.</p>
+                                    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 
-                                    </div>
+<style>
+  .matrix-container {
+    background: #145deg;
+    padding: 20px;
+    border-radius: 10px;
+    font-family: 'VT323', monospace;
+    color: rgba(125,225,125,0.75);
+    font-size: 20px;
+    text-shadow: 0 0 5px rgba(125,225,125,0.5), 0 0 15px rgba(125,250,125,1);
+    animation: ScreenEffect 0.05s ease infinite;
+  }
+
+  .matrix-container .Pulse {
+    animation: Pulse 1.5s ease infinite;
+  }
+
+  @keyframes ScreenEffect {
+    0% { opacity: 1 }
+    50% { opacity: 0.7 }
+    100% { opacity: 1 }
+  }
+
+  @keyframes Pulse {
+    0%, 100% { opacity: 0; }
+    50% { opacity: 1; }
+  }
+</style>
+
+<div class="matrix-container">
+  <p class="description">
+    4+ years in <span class="Pulse">Cyber security</span>—breaking Web Applications(Black Box/ White Box/ Gray Box), Mobile Applications(Android/iOS), API Security,
+    Network Infra PT, Wifi Network Security, POS Application Security, Thick Client applications <span class="Pulse">70+ Security Activity</span> with PCI DSS & ISO 27001. 
+    eCPPT & MCRTA certified, now <span class="Pulse">leveling up</span> with CRTA.
+    <span class="Pulse">Burp Suite</span>—my daily grind!
+  </p>
+</div>
+
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-6 col-xl-6 col-md-6 col-sm-6 col-12">
