--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
             <!-- Start Header Left -->
             <div class="col-lg-2 col-6">
                 <div class="header-left">
-                    <div class="logo">
-                        <a href="index.html">
-                            <img src="assets/images/icons/logoo.png" alt="logo">
-                        </a>
+                    <div class="d-flex align-items-center mb-4">
+                        <img src="assets/images/icons/logoo.png" alt="Sarsolutionz" class="img-fluid me-3" style="max-height: 40px;">
+                        <span id="matrix-logo" class="text-danger fw-bold fs-5" style="font-family: 'Courier New', monospace; letter-spacing: 1px;">SAR<span class="text-white">SOLUTIONZ</span></span>
                     </div>
                 </div>
             </div>
@@ -113,7 +112,9 @@
                         <button class="close-menu-activation close"><i data-feather="x"></i></button>
                     </div>
                 </div>
-                <p class="discription">Th3H4cK3R_R4HUL</p>
+                <!-- <p class="discription">Th3H4cK3R_R4HUL</p> -->
+                <span id="matrix-logo" class="text-danger fw-bold fs-5" style="font-family: 'Courier New', monospace; letter-spacing: 1px;">Th3H4cK3R_<span class="text-white">R4HUL</span></span>
+                    
             </div>
             <div class="content">
                 <ul class="primary-menu nav nav-pills">
